--- a/package.json
+++ b/package.json
@@ -13,20 +13,25 @@
     "@expo/metro-runtime": "~3.1.3",
     "@expo/webpack-config": "^0.12.52",
     "@lottiefiles/react-lottie-player": "^3.5.3",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "^8.1.0",
     "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
     "expo": "^51.0.11",
     "expo-image-picker": "^15.0.5",
     "expo-status-bar": "~1.11.1",
+    "haversine-distance": "^1.2.3",
+    "openrouteservice-js": "^0.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-animatable": "^1.4.0",
     "react-native-datepicker": "^1.7.2",
-    "react-native-maps": "^1.13.0",
+    "react-native-geocoding": "^0.5.0",
+    "react-native-maps": "^1.17.3",
     "react-native-maps-directions": "^1.9.0",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "^3.8.1",
@@ -35,7 +40,9 @@
     "react-native-svg": "^15.1.0",
     "react-native-svg-animations": "^1.0.0",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
