--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-animatable": "^1.4.0",
     "react-native-datepicker": "^1.7.2",
     "react-native-geocoding": "^0.5.0",
+    "react-native-gifted-chat": "^2.6.2",
     "react-native-maps": "^1.17.3",
     "react-native-maps-directions": "^1.9.0",
     "react-native-paper": "^5.12.3",
@@ -42,7 +43,8 @@
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
