--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "fyp",
+    "name": "Ride_Together",
     "slug": "fyp",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -29,5 +29,6 @@
     "web": {
       "favicon": "./assets/favicon.png"
     }
+    
   }
 }
