--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
-    "expo": "^51.0.11",
+    "expo": "^52.0.7",
+    "expo-constants": "^16.0.2",
+    "expo-device": "^6.0.2",
     "expo-image-picker": "^15.0.5",
+    "expo-notifications": "^0.28.19",
     "expo-status-bar": "~1.11.1",
     "haversine-distance": "^1.2.3",
     "openrouteservice-js": "^0.4.1",
@@ -31,17 +34,20 @@
     "react-native": "0.73.6",
     "react-native-animatable": "^1.4.0",
     "react-native-datepicker": "^1.7.2",
+    "react-native-feather": "^1.1.2",
     "react-native-geocoding": "^0.5.0",
+    "react-native-gesture-handler": "^2.21.2",
     "react-native-gifted-chat": "^2.6.2",
     "react-native-maps": "^1.17.3",
     "react-native-maps-directions": "^1.9.0",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-screens": "^4.1.0",
     "react-native-svg": "^15.1.0",
     "react-native-svg-animations": "^1.0.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.6",
+    "react-navigation": "^5.0.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "socket.io-client": "^4.7.5"
