--- a/package.json
+++ b/package.json
@@ -8,53 +8,70 @@
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
+ 
   "dependencies": {
-    "@dotlottie/react-player": "^1.6.19",
-    "@expo/metro-runtime": "~3.1.3",
-    "@expo/webpack-config": "^0.12.52",
-    "@lottiefiles/react-lottie-player": "^3.5.3",
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-community/datetimepicker": "^8.1.0",
-    "@react-native-picker/picker": "^2.10.0",
-    "@react-navigation/drawer": "^6.7.2",
+    "@expo/metro-runtime": "~3.2.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
+    "@react-native-firebase/app": "^20.3.0",
+    "@react-native-firebase/messaging": "^20.3.0",
+    "@react-native-picker/picker": "2.7.5",
+    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
-    "@react-navigation/stack": "^6.3.29",
-    "@reduxjs/toolkit": "^2.2.7",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.4.1",
+    "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
-    "expo": "^52.0.7",
-    "expo-constants": "^16.0.2",
-    "expo-device": "^6.0.2",
-    "expo-image-picker": "^15.0.5",
-    "expo-notifications": "^0.28.19",
-    "expo-status-bar": "~1.11.1",
-    "haversine-distance": "^1.2.3",
+    "expo": "~51.0.8",
+    "expo-auth-session": "~5.5.2",
+    "expo-constants": "~16.0.2",
+    "expo-crypto": "~13.0.2",
+    "expo-dev-client": "~4.0.26",
+    "expo-device": "~6.0.2",
+    "expo-image-manipulator": "~12.0.5",
+    "expo-image-picker": "~15.0.7",
+    "expo-linear-gradient": "^14.0.1",
+    "expo-location": "~17.0.1",
+    "expo-notifications": "~0.28.16",
+    "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.27",
+    "expo-web-browser": "~13.0.3",
+    "firebase": "^10.12.5",
+    "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
+    "nativewind": "^2.0.11",
     "openrouteservice-js": "^0.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
-    "react-native-datepicker": "^1.7.2",
+    "react-native-async-storage": "^0.0.1",
+    "react-native-country-codes-picker": "^2.3.5",
+    "react-native-date-picker": "^5.0.7",
     "react-native-feather": "^1.1.2",
-    "react-native-geocoding": "^0.5.0",
-    "react-native-gesture-handler": "^2.21.2",
-    "react-native-gifted-chat": "^2.6.2",
-    "react-native-maps": "^1.17.3",
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-image-crop-picker": "^0.41.2",
+    "react-native-joi": "^0.0.5",
+    "react-native-maps": "1.14.0",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "^4.6.3",
-    "react-native-screens": "^4.1.0",
-    "react-native-svg": "^15.1.0",
-    "react-native-svg-animations": "^1.0.0",
-    "react-native-vector-icons": "^10.1.0",
-    "react-native-web": "~0.19.6",
-    "react-navigation": "^5.0.0",
+    "react-native-phone-number-input": "^2.1.0",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
-    "socket.io-client": "^4.7.5"
+    "redux-saga": "^1.3.0",
+    "socket.io-client": "^4.7.5",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "webpack-dev-server": "^3.11.3"
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
